fix(global-style): overflow-y hidden added (second scrollbar hidden)

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   margin: 0;
   font-family: 'Inter', sans-serif;
+  overflow-y: hidden;
 }
 html,
 body,
@@ -150,4 +151,3 @@ app-footer {
   font-weight: 900;
   src: url('/fonts/inter-v20-latin-900.woff2') format('woff2');
 }
-
